<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="44dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/ic_company_building"
        android:text="@string/string_notjoinorcreate_company" />

    <Button
        android:id="@+id/btn_join_company"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_blue_style_selector"
        android:text="@string/string_joincompany"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_create_company"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_white_style_selector"
        android:text="@string/string_createcompany"
        android:textColor="#45ACFE" />
</LinearLayout>