<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_company"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_maincolor_bg"
    tools:context="com.kx.officetool.CreateCompanyActivity">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="12dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:text="@string/string_createcompany"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contentpanel_create_input_infos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title_bar"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="18dp"
            android:text="@string/string_input_createcompany_name_hint"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:id="@+id/iv_clear_edittext_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@mipmap/ic_edittext_clear" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/string_input_companyname"
                android:lines="1"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignBottom="@id/editText"
                android:layout_marginBottom="5dp"
                android:background="@drawable/normal_blue_color" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_sure"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/color_blue_style_selector"
            android:text="@string/string_sure"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/contentpanel_result"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rl_title_bar"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:drawableTop="@mipmap/ic_createcompany_success"
            android:textColor="#de000000"
            android:text="@string/string_createcompany_success"/>
        <TextView
            android:id="@+id/tv_companename"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:text="@string/string_format_company_name"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_goto_company"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/color_blue_style_selector"
            android:text="@string/string_goto_manager_curr"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
