<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_contact_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_company_details"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_marginTop="22dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <!--company logo-->
        <RelativeLayout
            android:id="@+id/viewroot_company_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:text="@string/string_company_avatar" />
            <ImageView
                android:id="@+id/iv_company_avatar_next"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/ic_next" />
            <ImageView
                android:id="@+id/iv_company_avatar"
                android:layout_toLeftOf="@id/iv_company_avatar_next"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/ic_personal_default" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_split_line"/>
        <!--company name-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|left"
                android:text="@string/string_company_name" />

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="新东方和蓝翔"
                android:textSize="18sp" />
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_split_line"/>
        <!--company id-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|left"
                android:text="@string/string_company_id" />

            <TextView
                android:id="@+id/tv_company_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="521024"
                android:textSize="18sp" />
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_split_line"/>
        <!--company manager-->
        <FrameLayout
            android:id="@+id/viewroot_company_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|left"
                android:text="@string/string_company_manager" />

            <ImageView
                android:id="@+id/iv_company_manager_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/ic_next" />
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_split_line"/>
        <!--company meetingrooms-->
        <FrameLayout
            android:id="@+id/viewroot_company_meetingroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical|left"
                android:text="@string/string_company_meetingroom" />

            <ImageView
                android:id="@+id/iv_company_meetingroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/ic_next" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>