<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_join_company"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_maincolor_bg"
    tools:context="com.kx.officetool.JoinCompanyActivity">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="12dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:text="@string/string_joincompany"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/toppanel_input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_back">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_blue_color"
                android:text="@string/string_search"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_clear_edittext_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@id/btn_search"
                android:src="@mipmap/ic_edittext_clear" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:layout_toLeftOf="@id/btn_search"
                android:background="@drawable/normal_blue_color" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/btn_search"
                android:background="@null"
                android:hint="@string/string_input_companyid"
                android:lines="1"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="#80ffffff"
                android:textCursorDrawable="@null"
                />
        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/contentpanel_input_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title_bar"
        android:layout_marginTop="24dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_find"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingBottom="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:text="@string/string_input_companyid"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_gravity="bottom"
            android:background="@drawable/normal_blue_color" />
    </FrameLayout>
    <TextView
        android:id="@+id/tv_noanycompany_info"
        android:layout_width="wrap_content"
        android:text="@string/string_noinfo_record"
        android:layout_centerInParent="true"
        android:drawableTop="@mipmap/ic_company_building"
        android:gravity="center_horizontal"
        android:drawablePadding="18dp"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

</RelativeLayout>
